[gd_scene load_steps=8 format=2]

[ext_resource path="res://View/basicPlayScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Model/buttons/gameModeButtons/QuestionMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://View/util/CorrectDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://Control/logic/NormalModeQuestions.gd" type="Script" id=4]
[ext_resource path="res://View/util/WrongDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://Control/interface/NormalMode.gd" type="Script" id=6]
[ext_resource path="res://textures/mountainView.jpg" type="Texture" id=7]

[node name="World" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="Background2" type="Sprite" parent="." index="1"]
position = Vector2( 511, 302 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="Background2" index="0"]
margin_left = -370.0
margin_top = -581.0
margin_right = 1414.0
margin_bottom = 697.0
color = Color( 0.133333, 0.411765, 0.384314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionMenu" parent="Background2/ColorRect" index="0" instance=ExtResource( 2 )]
anchor_top = 0.00225596
anchor_bottom = 0.00225601
margin_left = 77.4895
margin_top = 92.4893
margin_right = 1702.49
margin_bottom = 1150.49
rect_scale = Vector2( 1, 1 )
script = ExtResource( 4 )

[node name="HTTPRequest" type="HTTPRequest" parent="Background2/ColorRect/QuestionMenu" index="2"]

[node name="PlayBoard" parent="." index="2"]
visible = false

[node name="CorrectStatus" parent="PlayBoard" index="1" instance=ExtResource( 3 )]
visible = false
margin_right = 238.0
margin_bottom = 121.0

[node name="WrongStatus" parent="PlayBoard" index="2" instance=ExtResource( 5 )]
visible = false
margin_left = 9.0
margin_top = 18.0
margin_right = 247.0
margin_bottom = 153.0

[node name="Header" parent="." index="3"]
position = Vector2( -383.625, -19.0452 )

[node name="RichTextLabel" parent="Header" index="0"]
margin_left = 396.0
margin_right = 637.0
text = "World: Diffculty"

[node name="ColorRect" parent="Header/RichTextLabel" index="1"]
margin_left = -4.0
margin_top = -1.0
margin_right = -19.0
margin_bottom = -1.0

[node name="QuitButton" parent="." index="4"]
margin_left = 22.5082
margin_right = 124.508
script = null

[node name="ScoreBoard" type="Node2D" parent="." index="5"]
position = Vector2( -392.095, 75.2544 )

[node name="Score" type="RichTextLabel" parent="ScoreBoard" index="0"]
anchor_right = 10.0
margin_left = 394.0
margin_top = 20.0
margin_right = 486.0
margin_bottom = 37.0
rect_scale = Vector2( 3, 4 )
rect_clip_content = false
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Score Now: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ScoreBoard/Score" index="1"]
self_modulate = Color( 0.607843, 0.45098, 0.45098, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.448714
margin_top = -1.62353
margin_right = -0.448715
margin_bottom = -1.62353
color = Color( 0.415686, 0.223529, 0.223529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PassingBoard" type="Node2D" parent="." index="6"]
position = Vector2( -392.095, 165.781 )
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="PassingBoard" index="0"]
anchor_right = 10.0
margin_left = 394.0
margin_top = 20.0
margin_right = 505.0
margin_bottom = 52.0
rect_scale = Vector2( 3, 4 )
rect_clip_content = false
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Passing Score: 0/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PassingBoard/RichTextLabel" index="1"]
self_modulate = Color( 0.607843, 0.45098, 0.45098, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.448714
margin_top = -1.62353
margin_right = -0.448715
margin_bottom = -1.62353
color = Color( 0.415686, 0.223529, 0.223529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="Background2/ColorRect/QuestionMenu/HTTPRequest" to="Background2/ColorRect/QuestionMenu" method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
